tests/errors/case_no_match.dang
# This should fail: no matching clause
let result = case (5) {
  1 => "one"
  2 => "two"
}
